[package]
name        = "proudcat"
description = "proudcat - cat + :rainbow:"
version     = "0.2.0"
authors     = ["FC Stegerman <flx@obfusk.net>"]
homepage    = "https://github.com/obfusk/proudcat-rust"
repository  = "https://github.com/obfusk/proudcat-rust"
readme      = "README.md"
license     = "GPL-3.0-or-later"
keywords    = ["cat", "cli", "terminal", "colors", "colours"]
categories  = ["command-line-utilities"]
edition     = "2018"
exclude     = [".github"]

[dependencies]
atty      = "0.2.14"
structopt = "0.3.26"
term_size = "0.3.1"
